homework trouble with hemisphere images

--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -2,19 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dependencies\n",
     "import os\n",
     "from bs4 import BeautifulSoup as bs\n",
-    "import requests"
+    "import requests\n",
+    "from splinter import Browser\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,16 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "first_title = soup.find_all('div', class_=\"content_title\")[0].text.strip()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -62,13 +56,190 @@
        "'NASA Ingenuity Mars Helicopter Prepares for First Flight'"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "first_title"
+    "news_title = soup.find('div', class_=\"content_title\").find('a').text.strip()\n",
+    "news_title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Now uncocooned from its protective carbon-fiber shield, the helicopter is being readied for its next steps.'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "news_p = soup.find('div', class_=\"rollover_description_inner\").text.strip()\n",
+    "news_p"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Featured Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WDM] - ====== WebDriver manager ======\n",
+      "[WDM] - Current google-chrome version is 89.0.4389\n",
+      "[WDM] - Get LATEST driver version for 89.0.4389\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WDM] - Get LATEST driver version for 89.0.4389\n",
+      "[WDM] - Trying to download new driver from https://chromedriver.storage.googleapis.com/89.0.4389.23/chromedriver_mac64.zip\n",
+      "[WDM] - Driver has been saved in cache [/Users/tiffanyharris/.wdm/drivers/chromedriver/mac64/89.0.4389.23]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Setup splinter\n",
+    "executable_path = {'executable_path': ChromeDriverManager().install()}\n",
+    "browser = Browser('chrome', **executable_path, headless=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://data-class-jpl-space.s3.amazonaws.com/JPL_Space/\"\n",
+    "index = \"index.html\"\n",
+    "complete_url = f'{url}{index}'\n",
+    "browser.visit(complete_url)\n",
+    "html = browser.html\n",
+    "img_soup = bs(html, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Marsimage/featured/mars3.jpg'"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "urlb = img_soup.find('img', class_='headerimage fade-in')['src']\n",
+    "#featured_image_url = \"https://data-class-jpl-space.s3.amazonaws.com/JPL_Space/image/featured/mars3.jpg\"\n",
+    "featured_image_url = f'{url}{urlb}'\n",
+    "featured_image_url"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Facts Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>0</th>\\n      <th>1</th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>0</th>\\n      <td>Equatorial Diameter:</td>\\n      <td>6,792 km</td>\\n    </tr>\\n    <tr>\\n      <th>1</th>\\n      <td>Polar Diameter:</td>\\n      <td>6,752 km</td>\\n    </tr>\\n    <tr>\\n      <th>2</th>\\n      <td>Mass:</td>\\n      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n    </tr>\\n    <tr>\\n      <th>3</th>\\n      <td>Moons:</td>\\n      <td>2 (Phobos &amp; Deimos)</td>\\n    </tr>\\n    <tr>\\n      <th>4</th>\\n      <td>Orbit Distance:</td>\\n      <td>227,943,824 km (1.38 AU)</td>\\n    </tr>\\n    <tr>\\n      <th>5</th>\\n      <td>Orbit Period:</td>\\n      <td>687 days (1.9 years)</td>\\n    </tr>\\n    <tr>\\n      <th>6</th>\\n      <td>Surface Temperature:</td>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n    <tr>\\n      <th>7</th>\\n      <td>First Record:</td>\\n      <td>2nd millennium BC</td>\\n    </tr>\\n    <tr>\\n      <th>8</th>\\n      <td>Recorded By:</td>\\n      <td>Egyptian astronomers</td>\\n    </tr>\\n  </tbody>\\n</table>'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = 'https://space-facts.com/mars'\n",
+    "facts_table = pd.read_html(url)[0].to_html()\n",
+    "facts_table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mars Hemispheres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars\"\n",
+    "browser.visit(url)\n",
+    "html = browser.html\n",
+    "hemi_soup = bs(html, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Cerberus Hemisphere Enhanced',\n",
+       " 'Schiaparelli Hemisphere Enhanced',\n",
+       " 'Syrtis Major Hemisphere Enhanced',\n",
+       " 'Valles Marineris Hemisphere Enhanced']"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "banners_tag = hemi_soup.find_all('h3')\n",
+    "banners = [x.text for x in banners_tag]\n",
+    "banners"
    ]
   },
   {
@@ -77,7 +248,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "first_article = soup.find_all('div', class_=\"article_teaser_body\")"
+    "hemispheres = []\n",
+    "for i in range(len(banners)):\n",
+    "    hemisphere = {}\n",
+    "    \n",
+    "    browser.visit(url)\n",
+    "    browser.find_by_css('h3')[i].click()\n",
+    "    hemisphere['title'] = banners[i]\n",
+    "    hemisphere['img_url'] = browser.find_by_text('Sample')['href']\n",
+    "    \n",
+    "    hemispheres.append(hemisphere)\n",
+    "    \n",
+    "    browser.back()"
    ]
   },
   {
@@ -88,7 +270,14 @@
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[{'title': ['Cerberus Hemisphere Enhanced'],\n",
+       "  'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg'},\n",
+       " {'title': ['Schiaparelli Hemisphere Enhanced'],\n",
+       "  'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg'},\n",
+       " {'title': ['Syrtis Major Hemisphere Enhanced'],\n",
+       "  'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg'},\n",
+       " {'title': ['Valles Marineris Hemisphere Enhanced'],\n",
+       "  'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg'}]"
       ]
      },
      "execution_count": 44,
@@ -97,7 +286,51 @@
     }
    ],
    "source": [
-    "first_article"
+    "hemispheres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mars_data = {\n",
+    "    'news_title': news_title,\n",
+    "    'news_p': news_p,\n",
+    "    'featured_image_url': featured_image_url,\n",
+    "    'hemispheres': hemispheres\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'news_title': 'NASA Ingenuity Mars Helicopter Prepares for First Flight',\n",
+       " 'news_p': 'Now uncocooned from its protective carbon-fiber shield, the helicopter is being readied for its next steps.',\n",
+       " 'featured_image_url': 'https://data-class-jpl-space.s3.amazonaws.com/JPL_Space/image/featured/mars3.jpg',\n",
+       " 'hemispheres': [{'title': ['Cerberus Hemisphere Enhanced'],\n",
+       "   'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg'},\n",
+       "  {'title': ['Schiaparelli Hemisphere Enhanced'],\n",
+       "   'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg'},\n",
+       "  {'title': ['Syrtis Major Hemisphere Enhanced'],\n",
+       "   'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg'},\n",
+       "  {'title': ['Valles Marineris Hemisphere Enhanced'],\n",
+       "   'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg'}]}"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mars_data"
    ]
   },
   {
@@ -105,7 +338,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "browser.quit()"
+   ]
   }
  ],
  "metadata": {
